<resources>
	<string name="app_name">SOLF</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>

	<string name="mail_for_developer">寄信給開發者</string>
	<string name="nav_settings">設定</string>
	<string name="New_password_sent_to_your_email">新密碼已發送</string>
	<string name="Please_enter_your_email_address">請輸入你的電子郵件</string>

	<string name="menu_home">主畫面</string>
	<string name="menu_gallery">Gallery</string>
	<string name="menu_slideshow">Slideshow</string>
	<string name="menu_login">登入系統</string>
	<string name="menu_logout">登出系統</string>
	<string name="menu_medicine_box">個人藥物資料庫</string>
	<string name="menu_medicine">藥物資料查詢</string>
	<string name="menu_medicine_inquire">藥物查詢結果</string>
	<string name="menu_memory">跌倒記錄查詢</string>
	<string name="menu_calender">行事曆紀錄</string>
	<string name="menu_user">使用者資料</string>
	<string name="menu_registration">註冊介面</string>
	<string name="menu_calender_thing">行事曆事件新增</string>
	<string name="menu_calender_thing_update">行事曆事件修改</string>
	<string name="menu_medicine_allbox">藥物總覽查詢</string>
	<string name="menu_user_data">個人檔案</string>
	<string name="menu_user_set">系統設定</string>
	<string name="menu_password_change">修改密碼</string>
	<string name="menu_feedback">用戶反饋</string>
	<string name="menu_guided_tour">使用手冊</string>
	<string name="menu_emergency_contact">緊急連絡人新增</string>
	<string name="menu_contact_list">緊急連絡人列表</string>
	<string name="menu_contact_update">緊急連絡人修改</string>
	<string name="menu_forget_password">忘記密碼</string>
	<string name="menu_video">即時影像</string>

	<string name="capture_button">拍照按鈕</string>
	<string name="thumbnail_view">縮略圖視圖</string>

	<string name="enter_email">請輸入您的電子郵件地址</string>
	<string name="send_out">發送</string>
	<string name="please_enter_email">請輸入您的電子郵件以接收重置密碼指示</string>

	<string name="Calender_thing">行事曆事件輸入</string>
	<string name="thing_name">事件名稱</string>
	<string name="start_day">起始日期</string>
	<string name="end_day">結束日期</string>
	<string name="start_time">起始時間</string>
	<string name="end_time">結束時間</string>
	<string name="thing_people">事件對象</string>
	<string name="thing_illustrate">事件說明</string>
	<string name="thing_save">保存事件</string>
	<string name="thing_update_save">更新事件</string>
	<string name="thing_edit">繼續編輯</string>

	<string name="registration_form">註冊表單</string>
	<string name="user_name">使用者名稱</string>
	<string name="password">密碼</string>
	<string name="password_check">確認密碼</string>
	<string name="real_name">姓名</string>
	<string name="phone">電話</string>
	<string name="address">住址</string>
	<string name="mail">信箱</string>
	<string name="birthday_vid">生日(西元)</string>
	<string name="registration">註冊</string>
	<string name="calender_thing_update">行事曆事件修改</string>
	<string name="calender_thing">行事曆事件新增</string>

	<string name="function_set">功能設定</string>
	<string name="Message_reminder_set">消息提醒設置</string>
	<string name="Enable_notification_reminder">啟用通知提醒</string>
	<string name="Theme_color_set">主題顏色設定</string>
	<string name="System_language_conversion">系統語言轉換</string>
	<string name="Day_and_night_mode">日夜模式</string>
	<string name="Day_mode">日間模式</string>
	<string name="night_mode">夜間模式</string>
	<string name="User_feedback">用戶反饋</string>
	<string name="User_Manual">使用手冊</string>

	<string name="medicine_name">藥品名稱</string>
	<string name="Dosage">用量</string>
	<string name="Taking_time">服用時間</string>

	<string name="Feedback">意見回饋</string>
	<string name="Enter_comments">點選下方提交按鈕 \n 並輸入您的意見</string>
	<string name="Submit_comments">提交意見</string>
	<string name="Not_submit_comments">取消</string>

	<string name="Emergency_contact_information">緊急聯絡人資料</string>
	<string name="Name">姓名:</string>
	<string name="Enter_name">輸入聯絡人姓名</string>
	<string name="phone_number">電話號碼:</string>
	<string name="Enter_phone_number">輸入電話號碼</string>
	<string name="relation">關係選擇:</string>
	<string name="save">保存</string>
	<string name="delete">取消</string>
	<string name="dummy_button">Dummy Button</string>
	<string name="dummy_content">DUMMY\nCONTENT</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>


</resources>