<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_medicine_box"
        android:name="com.example.myapplication.ui.Medicine_box.Medicine_boxFragment"
        android:label="@string/menu_medicine_box"
        tools:layout="@layout/fragment_medicine_box" />

    <fragment
        android:id="@+id/nav_medicine"
        android:name="com.example.myapplication.ui.Medicine.MedicineFragment"
        android:label="@string/menu_medicine"
        tools:layout="@layout/fragment_medicine" />
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.myapplication.ui.Login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/nav_memory"
        android:name="com.example.myapplication.ui.Memory.MemoryFragment"
        android:label="@string/menu_memory"
        tools:layout="@layout/fragment_memory" />
    <fragment
        android:id="@+id/nav_calender"
        android:name="com.example.myapplication.ui.Calender.CalenderFragment"
        android:label="@string/menu_calender"
        tools:layout="@layout/fragment_calender" />
    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.myapplication.ui.User.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />
</navigation>