<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@android:drawable/ic_lock_idle_lock"
            android:title="@string/menu_login"
            android:text="登入系統"
            tools:ignore="HardcodedText" />

        <item
            android:id="@+id/nav_medicine_box"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/menu_medicine_box"
            android:text="個人藥物資料庫"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_medicine"
            android:text="藥物資料查詢"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_memory"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_memory"
            android:text="跌倒紀錄查詢"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_calender"
            android:icon="@android:drawable/ic_menu_month"
            android:title="@string/menu_calender"
            android:text="行事曆紀錄"
            tools:ignore="HardcodedText" />
        <item
            android:id="@+id/nav_user"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_user"
            android:text="使用者資料"
            tools:ignore="HardcodedText" />
    </group>
</menu>