<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		tools:context=".ui.Calender.CalenderThingUpdateFragment">


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="60dp"
			android:orientation="vertical"
			android:padding="16dp"
			app:layout_constraintTop_toTopOf="parent"
			tools:ignore="MissingConstraints">

			<EditText
				android:id="@+id/editText_thing"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp"
				android:hint="@string/thing_name"
				android:imeOptions="actionNext"
				android:textSize="20sp"
				tools:ignore="Autofill,TextFields" />

			<!-- 選擇事件起始日期的彈跳視窗 -->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="100dp"
					android:layout_height="50dp"
					android:text="@string/start_day"
					android:textSize="20sp" />

				<EditText
					android:id="@+id/editTextStartDate"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:hint="選擇的開始日期"
					android:imeOptions="actionNext"
					android:textSize="20sp"
					android:inputType="none"
					android:focusable="false"
					android:onClick="showStartDatePickerDialog"
					tools:ignore="Autofill,HardcodedText,TextFields" />

			</LinearLayout>

			<!-- 選擇事件結束日期的彈跳視窗 -->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="100dp"
					android:layout_height="50dp"
					android:text="@string/end_day"
					android:textSize="20sp" />

				<EditText
					android:id="@+id/editTextEndDate"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:focusable="false"
					android:hint="選擇的結束日期"
					android:imeOptions="actionNext"
					android:inputType="none"
					android:onClick="showEndDatePickerDialog"
					android:textSize="20sp"
					tools:ignore="Autofill,HardcodedText,TextFields" />

			</LinearLayout>

			<!-- 選擇事件起始時間的彈跳視窗 -->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="100dp"
					android:layout_height="50dp"
					android:text="@string/start_time"
					android:textSize="20sp" />

				<EditText
					android:id="@+id/editTextStartTime"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:hint="選擇的開始時間"
					android:imeOptions="actionNext"
					android:textSize="20sp"
					android:inputType="none"
					android:focusable="false"
					android:onClick="showStartTimePickerDialog"
					tools:ignore="Autofill,HardcodedText"/>
			</LinearLayout>

			<!-- 選擇事件結束時間的彈跳視窗 -->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="100dp"
					android:layout_height="50dp"
					android:text="@string/end_time"
					android:textSize="20sp" />

				<EditText
					android:id="@+id/editTextEndTime"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="8dp"
					android:hint="選擇的結束時間"
					android:imeOptions="actionNext"
					android:textSize="20sp"
					android:inputType="none"
					android:focusable="false"
					android:onClick="showEndTimePickerDialog"
					tools:ignore="Autofill,HardcodedText"  />

			</LinearLayout>

			<!-- 事件對象 -->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:layout_width="100dp"
					android:layout_height="40dp"
					android:text="@string/thing_people"
					android:textSize="20sp" />

				<Spinner
					android:id="@+id/spinnerCompanions"
					android:layout_width="match_parent"
					android:layout_height="50dp" />
			</LinearLayout>

			<!-- 事件輸入 -->
			<EditText
				android:id="@+id/editTextEventDescription"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				android:hint="@string/thing_illustrate"
				android:imeOptions="actionDone"
				android:textSize="20sp"
				tools:ignore="Autofill,TextFields" />

			<Button
				android:id="@+id/saveButton"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/thing_update_save"
				android:textSize="20sp" />

			<Button
				android:id="@+id/no_save_button"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/delete"
				android:textSize="20sp"
				tools:ignore="HardcodedText" />

		</LinearLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>