<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.emergency.Contact_updateFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="60dp"
		android:orientation="vertical"
		android:padding="16dp"
		app:layout_constraintTop_toTopOf="parent"
		tools:ignore="UselessParent">

		<ImageView
			android:id="@+id/image_emergency"
			android:layout_width="380dp"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="24dp"
			android:src="@drawable/menu_emergency"
			tools:ignore="ContentDescription,ObsoleteLayoutParam" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="120dp"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/Name"
				tools:ignore="HardcodedText" />

			<EditText
				android:id="@+id/edit_emergency_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:hint="@string/Enter_name"
				android:imeOptions="actionNext"
				android:inputType="text"
				tools:ignore="Autofill,HardcodedText,TextFields" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="120dp"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/phone_number"
				tools:ignore="HardcodedText"/>

			<EditText
				android:id="@+id/editTextPhone"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:hint="@string/Enter_phone_number"
				android:inputType="phone"
				tools:ignore="Autofill,HardcodedText,TextFields"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:orientation="horizontal">

			<TextView
				android:layout_width="120dp"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="電子信箱"
				tools:ignore="HardcodedText" />

			<EditText
				android:id="@+id/editTextEmail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:hint="請輸入電子信箱"
				android:imeOptions="actionSend"
				android:inputType="textEmailAddress"
				tools:ignore="Autofill,HardcodedText,TextFields" />
		</LinearLayout>

		<!-- 形狀下拉式選單 -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="120dp"
				android:layout_height="wrap_content"
				android:textSize="20sp"
				android:text="@string/relation"
				android:layout_marginStart="0dp"
				tools:ignore="HardcodedText" />

			<Spinner
				android:id="@+id/spinnerContact"
				android:layout_width="257dp"
				android:layout_height="50dp"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_marginEnd="16dp" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:orientation="horizontal">

			<Button
				android:id="@+id/buttonCancel"
				android:layout_width="175dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:background="@drawable/color"
				android:text="@string/delete"
				android:textSize="20sp"
				tools:ignore="HardcodedText" />

			<Button
				android:id="@+id/buttonSave"
				android:layout_width="175dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:background="@drawable/color"
				android:text="@string/save"
				android:textSize="20sp"
				tools:ignore="HardcodedText" />
		</LinearLayout>
	</LinearLayout>
</FrameLayout>
