<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.forget_password.forget_passwordFragment">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="16dp"
		tools:ignore="UselessParent">

		<ImageView
			android:id="@+id/image_logo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/logo"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="24dp"
			tools:ignore="ContentDescription" />

		<EditText
			android:id="@+id/edit_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/enter_email"
			android:inputType="textEmailAddress"
			android:layout_below="@id/image_logo"
			android:layout_marginTop="24dp"
			tools:ignore="Autofill,HardcodedText" />

		<Button
			android:id="@+id/button_submit"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/send_out"
			android:layout_below="@id/edit_email"
			android:background="@drawable/color_3"
			android:layout_marginTop="16dp"
			tools:ignore="HardcodedText" />

		<TextView
			android:id="@+id/text_instructions"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/please_enter_email"
			android:layout_below="@id/button_submit"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="16dp"
			android:textColor="@android:color/darker_gray"/>

	</RelativeLayout>
</FrameLayout>